--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@
 streamlit==1.39.0
 pandas==2.2.2
 
-# === Model + NLP Dependencies (prebuilt wheels) ===
+# === Model + NLP Dependencies (prebuilt wheels for Python 3.12) ===
 transformers==4.43.3
 tokenizers==0.19.1
-torch==2.3.1+cpu
+torch==2.3.1
 --extra-index-url https://download.pytorch.org/whl/cpu
 accelerate==0.33.0
 sentencepiece==0.2.0
