--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 # === Core Framework ===
-streamlit==1.39.0
-pandas==2.2.2
+streamlit>=1.39.0
+pandas>=2.2.3
 
-# === Model + NLP Dependencies (prebuilt wheels for Python 3.12) ===
-transformers==4.43.3
-tokenizers==0.19.1
-torch==2.3.1
---extra-index-url https://download.pytorch.org/whl/cpu
-accelerate==0.33.0
-sentencepiece==0.2.0
+# === Model + NLP Dependencies (3.13 ready) ===
+transformers>=4.45.2
+tokenizers>=0.20.1
+torch>=2.4.1
+accelerate>=0.34.0
+sentencepiece>=0.2.0
 
 # === File & Utility ===
-python-docx==1.1.2
-gdown==5.1.0
+python-docx>=1.1.2
+gdown>=5.2.0
 requests
 tqdm
