--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-# === Core Framework ===
-streamlit>=1.39.0
-pandas>=2.2.3
-
-# === Model + NLP Dependencies (3.13 ready) ===
-transformers>=4.45.2
-tokenizers>=0.20.1
-torch>=2.4.1
-accelerate>=0.34.0
-sentencepiece>=0.2.0
-
-# === File & Utility ===
-python-docx>=1.1.2
-gdown>=5.2.0
-requests
-tqdm
+streamlit==1.39.0
+pandas==2.2.2
+requests>=2.31.0
+python-docx==1.1.2
+gdown==5.2.0
+transformers==4.43.3
+accelerate>=0.33.0
+# CPU-only inference; avoid torch pin that fails on Py3.13 wheels
+# If you need torch locally, install a matching wheel for your OS/Python.
