--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ pandas==2.2.2
 requests>=2.31.0
 python-docx==1.1.2
 gdown==5.2.0
-transformers==4.43.3
-accelerate>=0.33.0
-# CPU-only inference; avoid torch pin that fails on Py3.13 wheels
-# If you need torch locally, install a matching wheel for your OS/Python.
+transformers==4.45.2
+accelerate==0.33.0
+# No torch!
