--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ requests>=2.31.0
 python-docx==1.1.2
 gdown==5.2.0
 transformers==4.45.2
-accelerate==0.33.0
-# No torch!
+sentencepiece==0.2.0          # enables T5 tokenizer without 'tokenizers' build
+safetensors>=0.4.5
+# deliberately NO torch, NO tokenizers, NO accelerate
