--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ requests>=2.31.0
 python-docx==1.1.2
 gdown==5.2.0
 transformers==4.45.2
-sentencepiece==0.2.0          # enables T5 tokenizer without 'tokenizers' build
+sentencepiece==0.2.0       # prebuilt wheels exist for cp311 manylinux
 safetensors>=0.4.5
-# deliberately NO torch, NO tokenizers, NO accelerate
+# no torch, no accelerate, no tokenizers needed
