--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ requests>=2.31.0
 python-docx==1.1.2
 gdown==5.2.0
 transformers==4.45.2
-sentencepiece==0.2.0       # prebuilt wheels exist for cp311 manylinux
+sentencepiece==0.2.0
 safetensors>=0.4.5
-# no torch, no accelerate, no tokenizers needed
+# no torch, no accelerate, no tokenizers
